--- a/notebooks/visualizations.ipynb
+++ b/notebooks/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "25     W  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "[456 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "25     W                  52.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,77 +803,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         ROUND                                            RESULTS        DATE  \\\n",
-      "0    Jornada 1                     SD ESPANYOL B 0 - 5 C.E.DMS  A  2022/10/15   \n",
-      "1    Jornada 2     FUNDACIÓ FUTBOL BADALONA A 4 - 8 SD ESPANYOL B  2022/10/22   \n",
-      "2    Jornada 3  SD ESPANYOL B 1 - 1 AELIS-SAGE PARTNER EIXAMPLE B  2022/10/29   \n",
-      "3    Jornada 4  FUTSAL CLASSIC BARCELONA, CLUB ESPORTIU  A 3 -...  2022/11/05   \n",
-      "4    Jornada 5   SD ESPANYOL B 7 - 3 SANT ANDREU SAGRERA - AESA A  2022/11/12   \n",
-      "5    Jornada 6                  PLAY FUTSAL A 6 - 4 SD ESPANYOL B  2022/11/19   \n",
-      "6    Jornada 7           SD ESPANYOL B 5 - 6 ALZINA ASSOC. ESP. A  2022/11/26   \n",
-      "7    Jornada 8                MONTSENY CECD A 2 - 5 SD ESPANYOL B  2022/12/03   \n",
-      "8    Jornada 9           SD ESPANYOL B 0 - 3 MAGIC SANTS FUTSAL B  2022/12/17   \n",
-      "9   Jornada 10          F.S  BOSCO ROCAFORT A 7 - 4 SD ESPANYOL B  2023/01/14   \n",
-      "10  Jornada 11       SD ESPANYOL B 0 - 4 FUTSAL ROSARIO CENTRAL A  2023/01/21   \n",
-      "11  Jornada 12         BADALONA FUTSAL IRIS A 5 - 2 SD ESPANYOL B  2023/02/04   \n",
-      "12  Jornada 13    LES CORTS ESPORTIU FUTSAL B 2 - 6 SD ESPANYOL B  2023/02/11   \n",
-      "13  Jornada 14                     C.E.DMS  A 6 - 6 SD ESPANYOL B  2023/02/25   \n",
-      "14  Jornada 15     SD ESPANYOL B 4 - 3 FUNDACIÓ FUTBOL BADALONA A  2023/03/04   \n",
-      "15  Jornada 16  AELIS-SAGE PARTNER EIXAMPLE B 4 - 6 SD ESPANYOL B  2023/03/11   \n",
-      "16  Jornada 17  SD ESPANYOL B 9 - 3 FUTSAL CLASSIC BARCELONA, ...  2023/03/18   \n",
-      "17  Jornada 18   SANT ANDREU SAGRERA - AESA A 5 - 3 SD ESPANYOL B  2023/03/25   \n",
-      "18  Jornada 19                  SD ESPANYOL B 7 - 7 PLAY FUTSAL A  2023/04/01   \n",
-      "19  Jornada 20           ALZINA ASSOC. ESP. A 7 - 5 SD ESPANYOL B  2023/04/15   \n",
-      "20  Jornada 21                SD ESPANYOL B 9 - 5 MONTSENY CECD A  2023/04/22   \n",
-      "21  Jornada 22           MAGIC SANTS FUTSAL B 3 - 5 SD ESPANYOL B  2023/04/29   \n",
-      "22  Jornada 23          SD ESPANYOL B 3 - 4 F.S  BOSCO ROCAFORT A  2023/05/06   \n",
-      "23  Jornada 24       FUTSAL ROSARIO CENTRAL A 1 - 3 SD ESPANYOL B  2023/05/13   \n",
-      "24  Jornada 25         SD ESPANYOL B 4 - 7 BADALONA FUTSAL IRIS A  2023/05/20   \n",
-      "25  Jornada 26    SD ESPANYOL B 2 - 1 LES CORTS ESPORTIU FUTSAL B  2023/05/27   \n",
-      "\n",
-      "   W/D/L  MATCH DAY HEART RATE  \n",
-      "0      L                  47.0  \n",
-      "1      W                  52.0  \n",
-      "2      D                  45.0  \n",
-      "3      W                  49.0  \n",
-      "4      W                  50.0  \n",
-      "5      L                  50.0  \n",
-      "6      L                  45.0  \n",
-      "7      W                  49.0  \n",
-      "8      L                  55.0  \n",
-      "9      L                  56.0  \n",
-      "10     L                  56.0  \n",
-      "11     L                  42.0  \n",
-      "12     W                  47.0  \n",
-      "13     D                  52.0  \n",
-      "14     W                   NaN  \n",
-      "15     W                   NaN  \n",
-      "16     W                  55.0  \n",
-      "17     L                  44.0  \n",
-      "18     D                   NaN  \n",
-      "19     L                  56.0  \n",
-      "20     W                  57.0  \n",
-      "21     W                   NaN  \n",
-      "22     L                  43.0  \n",
-      "23     W                  45.0  \n",
-      "24     L                  54.0  \n",
-      "25     W                  52.0  \n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<function matplotlib.pyplot.plot(*args: 'float | ArrayLike | str', scalex: 'bool' = True, scaley: 'bool' = True, data=None, **kwargs) -> 'list[Line2D]'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -890,8 +829,7 @@
    ],
    "source": [
     "# representation of the average match day heart rate\n",
-    "def match_heart_rate (df):\n",
-    "    print(df)\n",
+    "def match_heart_rate (merged_df):\n",
     "    plt.plot(merged_df['ROUND'], merged_df['MATCH DAY HEART RATE'], marker='X')\n",
     "\n",
     "    # Add labels and title\n",
@@ -911,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +858,7 @@
        "<function seaborn.categorical.boxplot(data=None, *, x=None, y=None, hue=None, order=None, hue_order=None, orient=None, color=None, palette=None, saturation=0.75, fill=True, dodge='auto', width=0.8, gap=0, whis=1.5, linecolor='auto', linewidth=None, fliersize=None, hue_norm=None, native_scale=False, log_scale=None, formatter=None, legend='auto', ax=None, **kwargs)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -938,7 +876,7 @@
    "source": [
     "def day_hr (df):\n",
     "   # mitja per dies de la setmana\n",
-    "    sns.boxplot(x=\"WEEKDAY\", y=\"NORMAL HEART RATE\", data=df_garmin);\n",
+    "    sns.boxplot(x=\"WEEKDAY\", y=\"NORMAL HEART RATE\", data=df)\n",
     "    plt.xlabel('')\n",
     "    return sns.boxplot\n",
     "\n",
@@ -947,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +894,7 @@
        "<function seaborn.distributions.histplot(data=None, *, x=None, y=None, hue=None, weights=None, stat='count', bins='auto', binwidth=None, binrange=None, discrete=None, cumulative=False, common_bins=True, common_norm=True, multiple='layer', element='bars', fill=True, shrink=1, kde=False, kde_kws=None, line_kws=None, thresh=0, pthresh=None, pmax=None, cbar=False, cbar_ax=None, cbar_kws=None, palette=None, hue_order=None, hue_norm=None, color=None, log_scale=None, legend=True, ax=None, **kwargs)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -974,7 +912,7 @@
    "source": [
     "# histograma distribucio heart rate (seaborn)\n",
     "def normal_hr (df):\n",
-    "    sns.histplot(x=df_garmin[\"NORMAL HEART RATE\"], bins=20);\n",
+    "    sns.histplot(x=df[\"NORMAL HEART RATE\"], bins=20)\n",
     "    plt.xlabel('Normal Heart Rate')\n",
     "    plt.ylabel('')\n",
     "    return sns.histplot\n",
@@ -983,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +930,7 @@
        "<function seaborn.distributions.histplot(data=None, *, x=None, y=None, hue=None, weights=None, stat='count', bins='auto', binwidth=None, binrange=None, discrete=None, cumulative=False, common_bins=True, common_norm=True, multiple='layer', element='bars', fill=True, shrink=1, kde=False, kde_kws=None, line_kws=None, thresh=0, pthresh=None, pmax=None, cbar=False, cbar_ax=None, cbar_kws=None, palette=None, hue_order=None, hue_norm=None, color=None, log_scale=None, legend=True, ax=None, **kwargs)>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1010,7 +948,7 @@
    "source": [
     "#histograma distribucio heart rate match day\n",
     "def matchday_hr (df):\n",
-    "    sns.histplot(x=merged_df[\"MATCH DAY HEART RATE\"], bins=8)\n",
+    "    sns.histplot(x=df[\"MATCH DAY HEART RATE\"], bins=8)\n",
     "    return sns.histplot\n",
     "\n",
     "matchday_hr(merged_df)\n"
@@ -1018,13 +956,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# joined histplots \n",
     "\n",
-    "def join_histplots (df):\n",
+    "def join_histplots (df_garmin, merged_df):\n",
     "    # Create a single figure and axis to host the histplots\n",
     "    fig, ax = plt.subplots()\n",
     "\n",
@@ -1045,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1060,21 +998,21 @@
     }
    ],
    "source": [
-    "join_histplots(df_garmin)"
+    "join_histplots(df_garmin, merged_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x13ce29110>"
+       "<matplotlib.legend.Legend at 0x11e9ba090>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1150,7 +1088,7 @@
    ],
    "source": [
     "\n",
-    "def violin_plot (df):\n",
+    "def violin_plot (df_garmin, merged_df):\n",
     "\n",
     "    # Create a single figure and axis to host the violin plots\n",
     "    fig, ax = plt.subplots()\n",
